2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac, src/lib/gmp_wrap.c: Support GMP with sbcl
	for 32-bit machines.

2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/weier.spad.pamphlet: Fix and clean up.

2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mts.spad.pamphlet: Give 0 for coefficients
	after end of stream.

2010-10-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/elfuts.spad.pamphlet: Better series expanders
	for elliptic functions.
	src/input/elfuts.input.pamphlet,
	src/input/mantepse.input.pamphlet: Update.


2010-10-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/input/ellip.input.pamphlet: New test file.
	src/input/Makefile.in: Adjust.

2010-10-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fspace.spad.pamphlet: Fix 'belong?' in FS and ES.
	src/algebra/combfunc.spad.pamphlet: Remove workaround.

2010-10-19  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* contrib/emacs/fricas.el: repair fricas-up-input

2010-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/expr.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet: Add a bunch of special
	functions.

2010-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2expxp.spad.pamphlet,
	src/algebra/fs2ups.spad.pamphlet,
	src/algebra/limitps.spad.pamphlet: Change strings to
	symbols.

2010-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/elfuts.spad.pamphlet: Use parameter instead of
	modulus as argument to elliptic functions.

2010-10-17  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* contrib/emacs/fricas.el: improve startup and handling of
	multiline input

2010-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/info.boot: Fix a bug with conditional type info.

2010-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/manip.spad.pamphlet,