@@ -456,8 +456,12 @@ After this function is called the image is clean and can be saved.
 
 (defun interpsys-ecl-image-init (spad)
      (format *standard-output* "Starting interpsys~%")
-     #+:ecl (if (fboundp 'ext:trap-fpe) (ext:trap-fpe T T))
-     #+:ecl (if (boundp SI:*BREAK-ENABLE*) (setf SI:*BREAK-ENABLE* t))
+     #+:ecl (let ((sym (find-symbol "TRAP-FPE" "EXT")))
+                 (if (and sym (fboundp sym))
+                     (funcall sym T T)))
+     #+:ecl (let ((sym (find-symbol "*BREAK-ENABLE*" "SI")))
+                (if (and sym (boundp sym)) 
+                    (setf (symbol-values sym) t)))
      (initroot spad)
      (setf spad $spadroot)
      (format *standard-output* "spad = ~s~%" spad)
