@@ -1,5 +1,9 @@
 2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/util.lisp: Fix build with recent ECL.
+
+2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* configure.ac, src/lib/gmp_wrap.c: Support GMP with sbcl
 	for 32-bit machines.
 
